fix swagger api documentation
